RESOLVED FIXED 247205
Fix CSSStyleValue.parse() / parseAll() for shorthand CSS properties
https://bugs.webkit.org/show_bug.cgi?id=247205
Summary Fix CSSStyleValue.parse() / parseAll() for shorthand CSS properties
Chris Dumez
Reported 2022-10-28 10:50:13 PDT
Fix CSSStyleValue.parse() / parseAll() for shorthand CSS properties.
Attachments
Chris Dumez
Comment 1 2022-10-28 11:14:39 PDT
EWS
Comment 2 2022-11-02 07:41:28 PDT
Committed 256228@main (fd2b5bf98a6e): <https://commits.webkit.org/256228@main> Reviewed commits have been landed. Closing PR #5917 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-11-02 07:42:18 PDT
Note You need to log in before you can comment on or make changes to this bug.