Fix CSSStyleValue.parse() / parseAll() for shorthand CSS properties https://bugs.webkit.org/show_bug.cgi?id=247205

Reviewed by Antti Koivisto.

Fix CSSStyleValue.parse() / parseAll() for shorthand CSS properties:
- https://drafts.css-houdini.org/css-typed-om/#dom-cssstylevalue-parse
- https://drafts.css-houdini.org/css-typed-om/#dom-cssstylevalue-parseall

* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/stylevalue-objects/parse.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/stylevalue-objects/parseAll-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/stylevalue-objects/parseAll.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/stylevalue-serialization/cssStyleValue-string-expected.txt:
* Source/WebCore/css/typedom/CSSStyleValueFactory.cpp:
(WebCore::CSSStyleValueFactory::extractShorthandCSSValues):
(WebCore::CSSStyleValueFactory::parseStyleValue):
* Source/WebCore/css/typedom/CSSStyleValueFactory.h:
* Source/WebCore/css/typedom/MainThreadStylePropertyMapReadOnly.cpp:
(WebCore::MainThreadStylePropertyMapReadOnly::shorthandPropertyValue const):

Canonical link: https://commits.webkit.org/256228@main